<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/inicioItem"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/buscarItem"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/buscar" />

    <item
        android:id="@+id/perfilItem"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/perfil" />

    <item
        android:id="@+id/favoritosItem"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/mensajesItem"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/mensajes" />

</menu>